# timer

./: .gitignore  index.html  package.json  stack.yaml  timer.cabal
app/: Main.hs
src/: Timer.hs
