name:                timer
version:             0.0.0.0
synopsis:            Simple countdown timer.
description:         Please see README.md
homepage:            http://github.com/siphilia/timer#readme
license:             BSD3
license-file:        LICENSE
author:              Siphilia
maintainer:          siphilia.rn@gmail.com
copyright:           (c) 2016 Siphilia
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Timer
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-dom == 0.2.*
  default-language:    Haskell2010
  ghc-options: -Wall -O2

executable timer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , timer
  default-language:    Haskell2010
  ghc-options: -Wall -O2

test-suite timer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , timer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/siphilia/timer
